--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <div class="container d-flex align-items-center">
         <div class="col" style="margin: 20px">
             <div class="card text-center mb-3" style="width: 18rem; height: 27rem">
-                <img src="images (3).jpg" class="card-img-top" alt="...">
+                <img src="images%20(3).jpg" class="card-img-top" alt="Children's Colosseum Quest Tour">
                 <div class="card-body">
                     <h5 class="card-title">Children's Colosseum Quest Tour</h5>
                     <p class="card-text">Your child will become a secret agent, solve the mysteries of the past, investigate the riddles...</p>
@@ -58,43 +58,44 @@
         </div>
 
         <div class="col" style="margin: 20px">
-            <div class="card text-center mb-3" style="width: 18rem;height: 27rem">
-                <img src="images.jpg">
+            <div class="card text-center mb-3" style="width: 18rem; height: 27rem">
+                <img src="images.jpg" class="card-img-top" alt="Antique Rome Photo Shoot Tour">
                 <div class="card-body">
                     <h5 class="card-title">Antique Rome Photo Shoot Tour</h5>
                     <p class="card-text">A walk through the heart of the Ancient Roman Empire. Take a trip to the legendary...</p>
                 </div>
                 <div class="card-footer">
-                    <a href="#" class="btn btn-primary" style="">More details</a>
+                    <a href="#" class="btn btn-primary">More details</a>
                 </div>
             </div>
-    </div>
-        <div class="col"style="margin: 20px">
-            <div class="card text-center mb-3" style="width: 18rem;height: 27rem">
-                <img src="images (2).jpg" class="card-img-top" alt="...">
+        </div>
+
+        <div class="col" style="margin: 20px">
+            <div class="card text-center mb-3" style="width: 18rem; height: 27rem">
+                <img src="images%20(2).jpg" class="card-img-top" alt="Rome Sightseeing Tour">
                 <div class="card-body">
                     <h5 class="card-title">Rome Sightseeing Tour</h5>
                     <p class="card-text">Rome sightseeing quest "The Eternal City: A Journey Through Time" is an adventure you have been dreaming of...</p>
                 </div>
                 <div class="card-footer">
-                    <a href="#" class="btn btn-primary" style="">More details</a>
+                    <a href="#" class="btn btn-primary">More details</a>
                 </div>
             </div>
         </div>
-        <div class="col"style="margin: 20px">
-            <div class="card text-center mb-3" style="width: 18rem;height: 27rem">
-                <img src="images (1).jpg" class="card-img-top" alt="Vatican museum">
+
+        <div class="col" style="margin: 20px">
+            <div class="card text-center mb-3" style="width: 18rem; height: 27rem">
+                <img src="images%20(1).jpg" class="card-img-top" alt="Vatican Museums and Saint Peter's Dome">
                 <div class="card-body">
                     <h5 class="card-title">Vatican Museums and Saint Peter's Dome</h5>
                     <p class="card-text">Vatican Museums is the largest museum complex in the world: 1,400 halls, more than 70,000 exhibits. The largest...</p>
                 </div>
                 <div class="card-footer">
-                    <a href="#" class="btn btn-primary" style="">More details</a>
+                    <a href="#" class="btn btn-primary">More details</a>
                 </div>
             </div>
         </div>
     </div>
-    
 
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid justify-content-center" style="background-color:#4e505d">
