--- a/index.html
+++ b/index.html
@@ -43,9 +43,11 @@
         </div>
     </div>
 
+
     <div class="container d-flex align-items-center">
+        <div class="row">
         <div class="col" style="margin: 20px">
-            <div class="card text-center mb-3" style="width: 18rem; height: 27rem">
+            <div class="card text-center mb-3" style="width: 16rem; height: 27rem">
                 <img src="images%20(3).jpg" class="card-img-top" alt="Children's Colosseum Quest Tour">
                 <div class="card-body">
                     <h5 class="card-title">Children's Colosseum Quest Tour</h5>
@@ -58,7 +60,7 @@
         </div>
 
         <div class="col" style="margin: 20px">
-            <div class="card text-center mb-3" style="width: 18rem; height: 27rem">
+            <div class="card text-center mb-3" style="width: 16rem; height: 27rem">
                 <img src="images.jpg" class="card-img-top" alt="Antique Rome Photo Shoot Tour">
                 <div class="card-body">
                     <h5 class="card-title">Antique Rome Photo Shoot Tour</h5>
@@ -71,7 +73,7 @@
         </div>
 
         <div class="col" style="margin: 20px">
-            <div class="card text-center mb-3" style="width: 18rem; height: 27rem">
+            <div class="card text-center mb-3" style="width: 16rem; height: 27rem">
                 <img src="images%20(2).jpg" class="card-img-top" alt="Rome Sightseeing Tour">
                 <div class="card-body">
                     <h5 class="card-title">Rome Sightseeing Tour</h5>
@@ -84,7 +86,7 @@
         </div>
 
         <div class="col" style="margin: 20px">
-            <div class="card text-center mb-3" style="width: 18rem; height: 27rem">
+            <div class="card text-center mb-3" style="width: 16rem; height: 27rem">
                 <img src="images%20(1).jpg" class="card-img-top" alt="Vatican Museums and Saint Peter's Dome">
                 <div class="card-body">
                     <h5 class="card-title">Vatican Museums and Saint Peter's Dome</h5>
@@ -95,6 +97,7 @@
                 </div>
             </div>
         </div>
+    </div>
     </div>
 
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
